--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,11 @@ flutter:
     - lib/core/utils/intl_ar.json
     - lib/core/utils/intl_en.json
 
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+    - family: Amiri
+      fonts:
+        - asset: assets/fonts/Amiri.ttf
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
