--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   dropdown_button2: ^2.3.9
   quran: ^1.3.1
   provider: ^6.1.5+1
+  shared_preferences: ^2.5.3
+  fluttertoast: ^9.0.0
 
 
 dev_dependencies:
