--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^2.5.3
   fluttertoast: ^9.0.0
   http: ^1.5.0
+  connectivity_plus: ^7.0.0
 
 
 dev_dependencies:
@@ -35,8 +36,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-    - lib/core/utils/intl_ar.json
-    - lib/core/utils/intl_en.json
+    - assets/json/data.json
 
   fonts:
     - family: Roboto
