--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   fluttertoast: ^9.0.0
   http: ^1.5.0
   connectivity_plus: ^7.0.0
+  google_sign_in: ^7.2.0
+  flutter_facebook_auth: ^7.1.2
 
 
 dev_dependencies:
