--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   connectivity_plus: ^7.0.0
   google_sign_in: ^7.2.0
   flutter_facebook_auth: ^7.1.2
+  flutter_svg: ^2.2.3
 
 
 dev_dependencies:
@@ -31,7 +32,13 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.4
 
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"
 
 flutter:
   uses-material-design: true
